[REFACTOR] - refactor audio output detection to use device list;
Signed-off-by: Abdurakhman R. <joha.shadibekov@gmail.com>